--- a/testhiilkaab/src/index.css
+++ b/testhiilkaab/src/index.css
@@ -59,6 +59,33 @@
     border-radius: 5px;
   }
 
+  .whatsapp_float {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 50px;
+    right: 40px;
+    background-color: #25d366;
+    color: #FFF;
+    border-radius: 40px;
+    text-align: center;
+    font-size: 25px;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 100;
+  }
+  
+
+  @media screen and (max-width: 767px) {
+  
+    .whatsapp_float {
+      width: 40px;
+      height: 40px;
+      bottom: 80px;
+      right: 10px;
+      font-size: 22px;
+    }
+  }
+
 
 @layer base {
     body {
